--- a/goldwatch/gold/templates/index.html
+++ b/goldwatch/gold/templates/index.html
@@ -29,7 +29,7 @@
                                                                                                     
                 </pre>
             </h1>
-            <p>You own: {{ total_gold_in_grams }} g of gold</p>
+            <p>Hoard: {{ total_gold_in_grams }} g of gold 💰</p>
             <p>Bought for a total of: {{ total_price }} €</p>
             <p>Your profit/loss is: {{ calculation }} €</p>
             <p>Current gold price: {{ current_gold_price }} €</p>
