Add missing closing tag

--- a/goldwatch/gold/templates/index.html
+++ b/goldwatch/gold/templates/index.html
@@ -35,7 +35,7 @@
             <p>Current gold price: {{ current_gold_price }} €</p>
 
         </main>
-    
+    </section>
     <footer>
         <p>Made with ❤️ by <a href="https://github.com/DennisNeu">DennisNeu</a></p>
     </footer>
