Color coding ugly but works

--- a/goldwatch/gold/static/style.css
+++ b/goldwatch/gold/static/style.css
@@ -72,3 +72,11 @@ footer {
 #profit {
     text-align: center;
 }
+
+.negative {
+    background-color: red;
+}
+
+.positive {
+    background-color: greenyellow;
+}
