--- a/goldwatch/gold/templates/index.html
+++ b/goldwatch/gold/templates/index.html
@@ -42,5 +42,7 @@
     <footer>
         <p>Made with ❤️ by <a href="https://github.com/DennisNeu">DennisNeu</a></p>
     </footer>
+
+    <script src="{% static 'script.js' %}"></script>
 </body>
 </html>
