Add total worth

--- a/goldwatch/gold/templates/index.html
+++ b/goldwatch/gold/templates/index.html
@@ -36,6 +36,7 @@
             <p>Hoard: {{ total_gold_in_grams }} g of gold 💰</p>
             <p>Bought for a total of: {{ total_price }} €</p>
             <p>Current gold price: {{ current_gold_price }} €</p>
+            <p>Current worth: {{ current_gold_worth }} €</p>
             </section>
         </main>
     </section>
